@@ -1,4 +1,5 @@
 Development
+    Fix X and Z keys not working in fullscreen mode
     Move subcp out of disable_ass if block
     Make loading a secondary http:// url via open location work correctly
     Set media label to be ellipsized on long values
